# Chat-With-Your-Data

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile.backend  Dockerfile.vllm  pyproject.toml  requirements.combined.txt  requirements.txt
backend/config/: config.yaml
backend/data_generators/: devices_generator.py  financial_generator.py
backend/scripts/: check_qdrant.sh  query_qdrant.py  start-backend.sh
backend/src/app/: __init__.py  config.py  demo_responses.py  deps.py  main.py  schemas.py
backend/src/app/ingest/: embedder.py  kafka_consumer.py  normalizer.py  upserter.py
backend/src/app/providers/: embedding_provider.py  http_vllm_provider.py
backend/src/app/routes/: __init__.py  admin.py  chat.py  chat_original_backup.py
backend/src/app/services/: charting.py  qdrant_store.py  query_cache.py  retrieval.py  schema_ingestion.py  sql_store.py
backend/src/app/utils/: __init__.py  admin_utils.py  conversation_manager.py  health_checks.py  ids.py  logs.py  query_detection.py  rag_processing.py  response_formatting.py  sql_generation.py
frontend/: Dockerfile.frontend  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/config/: config.json
frontend/src/: App.tsx  config.ts  main.tsx  styles.d.ts
frontend/src/components/: ChartView.tsx  Chat.scss  Chat.tsx  Message.tsx  TableView.scss  TableView.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/pages/: ChatPage.scss  ChatPage.tsx  SettingsPage.scss  SettingsPage.tsx
frontend/src/styles/: _variables.scss  global.scss
