[pyproject.toml]
[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "chat-with-your-data-backend"
version = "0.1.0"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "httpx>=0.27",
  "qdrant-client>=1.9.1",
  "duckdb>=1.0.0",
  "pandas>=2.2",
  "numpy>=1.26",
  "matplotlib>=3.8",
  "confluent-kafka>=2.5",
  "orjson>=3.10",
  "python-dotenv>=1.0",
]